# ros2_plugin

./: README.md
string_plugin_system/: CMakeLists.txt  README.md  package.xml
string_plugin_system/include/string_plugin_system/: string_plugin_base.hpp
string_plugin_system/plugins/: length_plugin.cpp  plugin_description.xml  reverse_plugin.cpp
string_plugin_system/src/: plugin_main.cpp
